...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:id="@+id/card_artist_detail_primary_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Primary Title"
                    android:height="24dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />
...
