<resources>
    <string name="app_name">Vinilos</string>
    <string name="newalbum_textview_title">Crear nuevo Album</string>
    <string name="newalbum_textview_name">Nombre</string>
    <string name="newalbum_textview_cover">Carátula</string>
    <string name="newalbum_textview_releasedate">Fecha de lanzamiento</string>
    <string name="newalbum_textview_description">Descripción</string>


    <string name="title_activity_asociate_track">Asociar</string>
    <string name="input_name_track">Nombre del track</string>
    <string name="newalbum_button_create">+ Crear</string>
    <string name="track_duracion">Duracion</string>
    <string name="button_asociar">+ Asociar</string>
    <string name="button_cancel_pupup_track">Volver a inicio</string>
    <string name="button_ok_pupup_track">OK</string>
    <string name="button_cancel_pupup_album">Volver</string>
    <string name="button_ok_pupup_album">Asociar tracks</string>
    <string-array name="Genres">
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>
    <string-array name="RecordLabels">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="button_albumes">Albumes</string>
    <string name="button_premios">Premios</string>
    <string name="accessibility_collector_detail_show">Flecha guia hacia detalle de coleccionista</string>
    <string name="nav_collector_name">Colleccionistas</string>
    <string name="drawer_collector_name">Colleccionistas</string>
    <string name="drawer_createAlbum_name">Crear Álbum</string>
    <string name="newAlbum_genre_hint">Seleccione un género</string>
    <string name="newAlbum_recordLabel_hint">Seleccione compañia discográfica</string>
    <string name="albumes_fragment_name">Albumes</string>
    <string name="artistas_fragment_name">Artistas</string>
    <string name="drawer_album_name">Álbumes</string>
    <string name="drawer_artist_name">Artistas</string>
    <string name="artist_image_description">Imagen de artista</string>
    <string name="collector_profile_photo">Placeholder for collector photo</string>
</resources>